# amm

./: .gitignore  README.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: README.md  create-devnet-token.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/health/: route.ts
frontend/src/components/: BuySellTabs.tsx  Header.tsx  LiquidityCard.tsx  PoolPickerModal.tsx  PositionsCard.tsx  Providers.tsx  QuickAmountButtons.tsx  SettingsPanel.tsx  SwapCard.tsx  SwapDetails.tsx  TokenInput.tsx  TokenLogo.tsx  TokenPickerModal.tsx  TokenSelectModal.tsx  TradingTerminal.tsx  WalletButton.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAmmPool.ts  useLpPositions.ts  useMintBalance.ts  useProgramPools.ts  useSwapQuote.ts  useSwapTransaction.ts  useTokenBalance.ts
frontend/src/lib/: transaction.ts
frontend/src/lib/amm/: discovery.ts  errors.ts  instruction.ts  layout.ts  pda.ts  pool.ts  quote.ts
frontend/src/lib/token/: ata.ts  wrap-sol.ts
frontend/src/types/: bn-js.d.ts  index.ts
program/: Cargo.toml
program/src/: error.rs  instruction.rs  invokers.rs  lib.rs  math.rs  processor.rs  state.rs
program/tests/: helpers.rs  integration_test.rs
scripts/: package-lock.json  package.json  state.json
scripts/src/: 01-create-tokens.ts  02-create-config.ts  03-create-pool.ts  04-swap.ts  05-deposit.ts  06-withdraw.ts  run-all.ts  utils.ts
